--- a/.github/comment.yml
+++ b/.github/comment.yml
@@ -14,14 +14,12 @@
     booleanFilterExpression: "!(ARMSignedOff||ARMChangesRequested||Approved-OkToMerge||WaitForARMRevisit)"
     onCheckedLabels:
       - WaitForARMFeedback
-    onCheckedComments: "Hi, @${PRAuthor} your PR was labelled with WaitForARMFeedback. cc @${PRAssignee}"
+    onCheckedComments: "Hi, @${PRAuthor} your PR was labelled with WaitForARMFeedback label. And we will send an email to notify ARM review board(armapireview@microsoft.com). cc @${PRAssignee}"
 
 - rule:
     type: checkbox
     keywords:
       - "I have reviewed the [documentation](https://aka.ms/ameonboard) for the workflow."
-    onCheckedLabels:
-      - ReadyForReview
     onCheckedComments: "Hi, @${PRAuthor} Thanks for your PR. I am workflow bot for review process. Here are some small tips. </br> <li> Please check the checkbox in first PR comments if applicable. </li> <li>If CI failed, Please fix CI error before PR merge. [How to fix?](https://aka.ms/ci-fix) </li> <li> PR assignee is responsible for your current PR reviewing and merging. </li> </br> Any feedback about review process or workflow bot, pls contact swagger and tools team. vsswagger@microsoft.com"
 
 - rule:
