--- a/.github/comment.yml
+++ b/.github/comment.yml
@@ -14,21 +14,20 @@
     booleanFilterExpression: "!(ARMSignedOff||ARMChangesRequested||Approved-OkToMerge||WaitForARMRevisit)"
     onCheckedLabels:
       - WaitForARMFeedback
-    onCheckedComments: "Hi, @${PRAuthor} your PR was labelled with WaitForARMFeedback label. And we will send an email to notify ARM review board(armapireview@microsoft.com). cc @${PRAssignee}"
+    onCheckedComments: "Hi, @{PRAuthor} your PR are labelled with WaitForARMFeedback. A notification email will be sent out shortly afterwards to notify ARM review board(armapireview@microsoft.com). cc ${PRAssignee} "
 
 - rule:
     type: checkbox
     keywords:
       - "I have reviewed the [documentation](https://aka.ms/ameonboard) for the workflow."
-    onCheckedComments: "Hi, @${PRAuthor} Thanks for your PR. I am workflow bot for review process. Here are some small tips. </br> <li> Please check the checkbox in first PR comments if applicable. </li> <li>If CI failed, Please fix CI error before PR merge. [How to fix?](https://aka.ms/ci-fix) </li> <li> PR assignee is responsible for your current PR reviewing and merging. </li> </br> Any feedback about review process or workflow bot, pls contact swagger and tools team. vsswagger@microsoft.com"
+    onCheckedComments: "Hi, @${PRAuthor} Thanks for your PR. I am workflow bot for review process. Here are some small tips. </br> <li> Please ensure to do self-check against checklists in first PR comments.</li> <li> PR assignee is the person auto-assigned and responsible for your current PR reviewing and merging. </li> <li> PR assignee is responsible for your current PR reviewing and merging. </li> <li> If there is CI failure(s), to fix CI error(s) is mandatory for PR merge; or you need to provide justification in PR comment and @PR assignee for explanation. [How to fix?](https://github.com/Azure/azure-rest-api-specs/blob/master/documentation/ci-fix.md)</li></br> Any feedback about review process or workflow bot, pls contact swagger and tools team. vsswagger@microsoft.com"
 
 - rule:
     type: label
     label: breakingChange
-    onLabeledComments: "Hi, @${PRAuthor} your PR contains breaking change. Pls follow [breaking change policy](https://dev.azure.com/msazure/AzureWiki/_wiki/wikis/AzureWiki.wiki/43942/Policy-for-Breaking-Changes). "
+    onLabeledComments: "Hi ${PRAuthor}, one or multiple breaking change(s) is detected in your PR. Pls follow [breaking change policy](https://dev.azure.com/msazure/AzureWiki/_wiki/wikis/AzureWiki.wiki/43942/Policy-for-Breaking-Changes) to request breaking change review and approval before proceeding swagger PR review. "
 
 - rule:
     type: label
     label: ApprovedOkToMerge
-    onLabeledComments: "Hi, @${PRAuthor} congratulations. Your PR was approved. </br> <li> If your PR are ready to merge, pls contact PR assignee @${PRAssignee} to merge. </li><li>If your PR in private repo, when your service ready to go public, pls create PR in public repo [Azure/azure-rest-api-specs](https://github.com/Azure/azure-rest-api-specs) and reference this one. </li>"
-
+    onLabeledComments: "Hi @${PRAuthor},Your PR is approved. Congratulations. </br> <li> If your PR is in public repo (azure-rest-api-specs),  PR assignee will merge all updates in the PR shortly afterwards; or pause the PR merge, you need to put on a label DoNotMerge to PR as soon as possible. </li><li>If your PR is in private repo (azure-rest-api-specs-pr),  there won’t be PR merge.  Please refer to this [wiki](https://dev.azure.com/azure-sdk/internal/_wiki/wikis/internal.wiki/205/RP-Scenarios-to-Contribute-to-Swagger?anchor=**public-repository-vs.-private-repository**) for further guidance on how to proceed. </li>"
