--- a/.github/comment.yml
+++ b/.github/comment.yml
@@ -20,7 +20,7 @@
     type: checkbox
     keywords:
       - "I have reviewed the [documentation](https://aka.ms/ameonboard) for the workflow."
-    onCheckedComments: "Hi, @${PRAuthor} Thanks for your PR. I am workflow bot for review process. Here are some small tips. </br> <li> Please ensure to do self-check against checklists in first PR comments.</li> <li> PR assignee is the person auto-assigned and responsible for your current PR reviewing and merging. </li> <li> PR assignee is responsible for your current PR reviewing and merging. </li> <li> If there is CI failure(s), to fix CI error(s) is mandatory for PR merge; or you need to provide justification in PR comment and @PR assignee for explanation. [How to fix?](https://github.com/Azure/azure-rest-api-specs/blob/master/documentation/ci-fix.md)</li></br> Any feedback about review process or workflow bot, pls contact swagger and tools team. vsswagger@microsoft.com"
+    onCheckedComments: "Hi, @${PRAuthor} Thanks for your PR. I am workflow bot for review process. Here are some small tips. </br> <li> Please ensure to do self-check against checklists in first PR comments.</li> <li> PR assignee is the person auto-assigned and responsible for your current PR reviewing and merging. </li>  <li> If there is CI failure(s), to fix CI error(s) is mandatory for PR merge; or you need to provide justification in PR comment for explanation. [How to fix?](https://github.com/Azure/azure-rest-api-specs/blob/master/documentation/ci-fix.md)</li></br> Any feedback about review process or workflow bot, pls contact swagger and tools team. vsswagger@microsoft.com"
 
 - rule:
     type: label
