--- a/.github/comment.yml
+++ b/.github/comment.yml
@@ -14,7 +14,7 @@
     booleanFilterExpression: "!(ARMSignedOff||ARMChangesRequested||Approved-OkToMerge||WaitForARMRevisit)"
     onCheckedLabels:
       - WaitForARMFeedback
-    onCheckedComments: "Hi, @${PRAuthor} your PR are labelled with WaitForARMFeedback. A notification email will be sent out shortly afterwards to notify ARM review board(armapireview@microsoft.com). cc @${PRAssignee} "
+    onCheckedComments: "Hi, @${PRAuthor} your PR are labelled with <b>WaitForARMFeedback</b>. A notification email will be sent out shortly afterwards to notify ARM review board(armapireview@microsoft.com). cc @${PRAssignee} "
 
 - rule:
     type: checkbox
@@ -30,4 +30,4 @@
 - rule:
     type: label
     label: ApprovedOkToMerge
-    onLabeledComments: "Hi @${PRAuthor},Your PR is approved. Congratulations. </br> <li> If your PR is in public repo (azure-rest-api-specs),  PR assignee will merge all updates in the PR shortly afterwards; or pause the PR merge, you need to put on a label DoNotMerge to PR as soon as possible. </li><li>If your PR is in private repo (azure-rest-api-specs-pr),  there won’t be PR merge.  Please refer to this [wiki](https://dev.azure.com/azure-sdk/internal/_wiki/wikis/internal.wiki/205/RP-Scenarios-to-Contribute-to-Swagger?anchor=**public-repository-vs.-private-repository**) for further guidance on how to proceed. </li>"
+    onLabeledComments: "Hi @${PRAuthor},Your PR is approved. Congratulations. </br> <li> If your PR is in public repo (azure-rest-api-specs),  PR assignee will merge all updates in the PR shortly afterwards; or pause the PR merge, you need to put on a label <b>DoNotMerge</b> to PR as soon as possible. </li><li>If your PR is in private repo (azure-rest-api-specs-pr),  there won’t be PR merge.  Please refer to this [wiki](https://dev.azure.com/azure-sdk/internal/_wiki/wikis/internal.wiki/205/RP-Scenarios-to-Contribute-to-Swagger?anchor=**public-repository-vs.-private-repository**) for further guidance on how to proceed. </li>"
