--- a/.github/comment.yml
+++ b/.github/comment.yml
@@ -41,7 +41,7 @@
 - rule:
     type: label
     label: CI-Failed
-    onLabeledComments: "Hi @${PRAuthor}, <table><tr><th>Task</th><th>How to fix</th><th>Priority</th><th>Support</th></tr><tr><td>Avocado</td><td>[readme](https://github.com/Azure/avocado)</td><td>High</td><td>ruowan@microsoft.com</td></tr></table>" 
+    onLabeledComments: "Hi @${PRAuthor}, <table><tr><th>Task</th><th>How to fix</th><th>Priority</th><th>Support</th></tr><tr><td>Avocado</td><td>[readme](https://github.com/Azure/avocado)</td><td>High</td><td>ruowan@microsoft.com</td></tr><tr><td>LintDiff</td><td>[fix lintDiff](https://github.com/Azure/azure-rest-api-specs/blob/master/documentation/ci-fix.md#linter-validation)</td><td>high</td><td>Jianye.Xi@microsoft.com, ruoxuan@microsoft.com</td></tr><tr><td>Semantic validation</td><td>[Fix-SenmanticValidation-Error](https://github.com/Azure/azure-rest-api-specs/blob/master/documentation/ci-fix.md#semantic-validation)</td><td>High</td><td>raychen@microsoft.com, Jianye.xi@microsoft.com</td></tr><tr><td>Model validation</td><td>[Fix-ModelValidation-Error](https://github.com/Azure/azure-rest-api-specs/blob/master/documentation/ci-fix.md#model-validation)</td><td>High</td><td>raychen@microsoft.com,Jianye.xi@microsoft.com</td></tr></table>" 
 
 - rule:
     type: label
